# subhuti-cli

./: .gitignore  Cargo.toml  README.md  aniya.py
.subhuti/: output.json  pipeline.json
.subhuti/mac-skills/: mac_skills.md  run_skill.py
.subhuti/mac-skills/skills/: __init__.py  click.py  close_app.py  hide_app.py  open_app.py  open_desktop.py  open_downloads.py  open_url.py  screenshot.py  scroll_down.py  scroll_up.py  skill_base.py  sleep.py  type_text.py
src/: core.rs  extend.rs  lib.rs  main.rs
src/core/: agent.rs  cli.rs  context.rs  schedule.rs
src/core/agent/: agent.rs  mac_agent.rs  vlm.rs
src/core/context/: hub.rs  pipeline_context.rs
src/core/schedule/: pipeline.rs
src/extend/: agent.rs  executor.rs  listener.rs  pipeline.rs
src/extend/agent/: mac_agent.rs
src/extend/cli/: commands.rs  render.rs
src/extend/executor/: base_executor.rs  command_executor.rs  mac_executor.rs  react_ai_executor.rs
src/extend/listener/: logger_listener.rs  pipeline_listener.rs
src/tests/: pipeline_test.rs
仿照cc/: 记忆迷宫.rs  项目架构
项目架构/: ContextOrchestrator.py  ErrorClassification.py  ProjectContextManager.py  ai自动化流水线 软件设计，提示词.md  http请求.md  subhuti项目架构.md  修复节点.md  别人skill文档.md  开发计划.md  文件结构  架构提示词  流水与任务的区别.md  流水模式和任务模式.md  流水线闭环设计  流水，任务，graph全架构  监听器和拦截器
